--- a/Session_2.ipynb
+++ b/Session_2.ipynb
@@ -32,12 +32,13 @@
         "colab": {}
       },
       "source": [
-        "from __future__ import print_function   # To use the newer features of print, in case, using older version of python\n",
-        "import torch                            #  \n",
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "import torch.optim as optim\n",
-        "from torchvision import datasets, transforms"
+        "from __future__ import print_function         # Imports the newer features of print (which is a function), in case, using older version of python\n",
+        "import torch                                  # Import torch library\n",
+        "import torch.nn as nn                         # Import torch.nn module that helps in creating and training of the neural network.  \n",
+        "import torch.nn.functional as F               # Import nn.functional module that contain useful functions such as activation function.\n",
+        "import torch.optim as optim                   # Import nn.optim that implements various optimization algorithms. \n",
+        "from torchvision import datasets, transforms  # Import datasets and transforms from torchvision which houses popular datasets, model architectures, and\n",
+        "                                              # common image transformations. "
       ],
       "execution_count": null,
       "outputs": []
