--- a/Session_2.ipynb
+++ b/Session_2.ipynb
@@ -51,8 +51,8 @@
         "colab": {}
       },
       "source": [
-        "class Net(nn.Module):\n",
-        "    def __init__(self):\n",
+        "class Net(nn.Module):                               # create a class named Net with \n",
+        "    def __init__(self):                             #\n",
         "        super(Net, self).__init__()\n",
         "        self.conv1 = nn.Conv2d(1, 32, 3, padding=1) #input -? OUtput? RF\n",
         "        self.conv2 = nn.Conv2d(32, 64, 3, padding=1)\n",
