--- a/Session_2.ipynb
+++ b/Session_2.ipynb
@@ -40,7 +40,7 @@
         "from torchvision import datasets, transforms  # Import datasets and transforms from torchvision which houses popular datasets, model architectures, and\n",
         "                                              # common image transformations. "
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -52,8 +52,8 @@
       },
       "source": [
         "class Net(nn.Module):                               # create a class named Net with \n",
-        "    def __init__(self):                             #\n",
-        "        super(Net, self).__init__()\n",
+        "    def __init__(self):                             # All classes have __init__() function which is always executed with class is created with self parameter that references to the current instance of the class and to access variables that belong to that class. It need not be named \"self\" and can be any called with whatever name but has to be the first parameter of any function in the class.\n",
+        "        super(Net, self).__init__()                 # Inherit all the methods and functions of parents class (nn.module in this case)\n",
         "        self.conv1 = nn.Conv2d(1, 32, 3, padding=1) #input -? OUtput? RF\n",
         "        self.conv2 = nn.Conv2d(32, 64, 3, padding=1)\n",
         "        self.pool1 = nn.MaxPool2d(2, 2)\n",
@@ -72,7 +72,7 @@
         "        x = x.view(-1, 10)\n",
         "        return F.log_softmax(x)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -80,18 +80,42 @@
       "metadata": {
         "colab_type": "code",
         "id": "xdydjYTZFyi3",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "65d01e95-f3d8-4f12-aebe-cccd4b000206"
       },
       "source": [
         "!pip install torchsummary\n",
         "from torchsummary import summary\n",
-        "use_cuda = torch.cuda.is_available()\n",
-        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
-        "model = Net().to(device)\n",
+        "use_cuda = torch.cuda.is_available()                    # Determines if the systeme supports CUDA\n",
+        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")    # uses CUDA if available from previous step or uses CPU\n",
+        "model = Net().to(device)                                # \n",
+        "print (model)\n",
         "summary(model, input_size=(1, 28, 28))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: torchsummary in /usr/local/lib/python3.6/dist-packages (1.5.1)\n",
+            "Net(\n",
+            "  (conv1): Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+            "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+            "  (pool1): MaxPool2d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (conv3): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+            "  (conv4): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+            "  (pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (conv5): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (conv6): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (conv7): Conv2d(1024, 10, kernel_size=(3, 3), stride=(1, 1))\n",
+            ")\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -121,7 +145,7 @@
         "                    ])),\n",
         "    batch_size=batch_size, shuffle=True, **kwargs)\n"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -164,7 +188,7 @@
         "        test_loss, correct, len(test_loader.dataset),\n",
         "        100. * correct / len(test_loader.dataset)))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -172,7 +196,11 @@
       "metadata": {
         "id": "MMWbLWO6FuHb",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "a24f9f0a-9317-400a-f934-943253a86700"
       },
       "source": [
         "\n",
@@ -183,8 +211,26 @@
         "    train(model, device, train_loader, optimizer, epoch)\n",
         "    test(model, device, test_loader)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 0/469 [00:00<?, ?it/s]/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:20: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "loss=1.776332974433899 batch_id=468: 100%|██████████| 469/469 [00:35<00:00, 13.07it/s]\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Test set: Average loss: 1.7006, Accuracy: 3814/10000 (38%)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
