--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1032,7 +1032,7 @@
         "import torch.optim as optim\n",
         "from torchvision import datasets, transforms, utils"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1055,7 +1055,7 @@
       "source": [
         "data_transforms = transforms.Compose([transforms.ToTensor()])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1075,7 +1075,6 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0,
           "referenced_widgets": [
             "c4f2777c15ec4a27801c490003e43c9e",
             "215c462829484bc794d992e697334ca0",
@@ -1121,7 +1120,7 @@
         "# transforms.ToTensor(train)\n",
         "# print(y)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,7 +1253,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1288,7 +1287,7 @@
         "\n",
         "test_loader = torch.utils.data.DataLoader(test, **dataloader_args)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1307,8 +1306,7 @@
         "id": "SLXzgOH9FX-i",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "d16b9852-7a1e-49fa-8d9c-dd60e764766f"
       },
@@ -1346,7 +1344,7 @@
         "# plt.imshow(images[1].numpy().squeeze(), )\n",
         "print(labels)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1399,8 +1397,7 @@
         "id": "yPDQg_c7rpl6",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "b8729def-57b4-40a2-b30d-546b6411e61f"
       },
@@ -1412,7 +1409,7 @@
         "  plt.axis(\"off\")\n",
         "  plt.imshow(images[index].numpy().squeeze(), cmap='gray_r')\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1530,7 +1527,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
