--- a/Basic_Commands.ipynb
+++ b/Basic_Commands.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic_Commands.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPIwhUw0GZm/yQcvPBuYpOX",
+      "authorship_tag": "ABX9TyOCxNIAc9brbkQyiq66kKy1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,8 @@
       },
       "source": [
         "cd sample_data\n",
-        "ls"
+        "ls\n",
+        "cd /"
       ],
       "execution_count": null,
       "outputs": []
@@ -94,7 +95,9 @@
         }
       },
       "source": [
-        "cd CloneFromAnujshah1003CNN/"
+        "cd CloneFromAnujshah1003CNN/\n",
+        "\n",
+        "rm -rf YoloV3_Annotation_Tool-master.zip"
       ],
       "execution_count": 19,
       "outputs": [
@@ -110,37 +113,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n8-ur3C8XBw4"
-      },
-      "source": [
-        "from zipfile import ZipFile\n",
-        "file_name = 'data.zip'\n",
-        "\n",
-        "#Opening the zip file in the read me mode\n",
-        "\n",
-        "with ZipFile(file_name, 'r') as zip:\n",
-        "  print('Extrating of the file now...')\n",
-        "  zip.extractall()\n",
-        "  print('Done')\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "MJyRgfTYTOR9"
       },
       "source": [
-        "cd /\n",
-        "ls\n",
-        "cd content\n",
-        "rm -rf YoloV3_Annotation_Tool-master.zip\n",
-        "\n",
         "from zipfile import ZipFile\n",
         "\n",
         "name = 'YoloV3_Annotation_Tool-master.zip'\n",
+        "\n",
+        "#Opening the zip file in the read me mode\n",
         "\n",
         "with ZipFile(name, 'r') as zip:\n",
         "  print(\"Extracting of file now...\")\n",
@@ -149,6 +129,102 @@
       ],
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lu8A3lpNZNKA"
+      },
+      "source": [
+        "!pip install -q keras"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ya5xYO6mZU6y"
+      },
+      "source": [
+        "from tensorflow.python.client import device_lib\n",
+        "device_lib.list_local_devices()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_nAIABzBaEBS"
+      },
+      "source": [
+        "cat /proc/cpuinfo\n",
+        "cat /proc/meminfo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IH87Bka9h65t"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "tf.nn?"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1lZQJL0moOav"
+      },
+      "source": [
+        "mkdir Prash\n",
+        "cd Prash"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mWUr98__tCUc"
+      },
+      "source": [
+        "from google.colab import files\n",
+        "upload = files.upload()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KKDidmjevqyo",
+        "outputId": "d48d301d-81c5-4f9e-a579-c3a29d7d4765",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from add_file import state\n",
+        "state(2)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
